--- a/meridthio.ini
+++ b/meridthio.ini
@@ -1,11 +1,9 @@
 [uwsgi]
-module = wsgi
-
+module = wsgi:app
 master = true
-processes = 5
-
+processes = 3
 socket = meridthio.sock
 chmod-socket = 660
 vacuum = true
-
 die-on-term = true
+logto = /var/www/meridth.io/uwsgi/meridthio.log
