add google site verification

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-blinker==1.4
-click==6.6
-Flask==0.11.1
-Flask-Mail==0.9.1
-itsdangerous==0.24
-Jinja2==2.8
-MarkupSafe==0.23
-requests==2.10.0
-uWSGI==2.0.13.1
-Werkzeug==0.11.10
+blinker
+click
+Flask
+Flask-Mail
+itsdangerous
+Jinja2
+MarkupSafe
+requests
+uWSGI
+Werkzeug
