--- a/deploy.yml
+++ b/deploy.yml
@@ -6,6 +6,10 @@
         repo: git@github.com:jmeridth/meridth.io.git
         dest: /var/www/meridth.io/html
 
+# create meridthio service
+# create virtualenv
+# setup /var/www/meridth.io/uwsgi/meridthio.logging
+
     - service:
         name: meridthio
         state: restarted
