--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,6 @@
 [defaults]
+gathering = smart
 host_key_checking = False
 nocows = 1
+vault_password_file = ~/.ansible/meridthio_vault_pass.txt
+inventory = hosts
