--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,24 +1,8 @@
 version: '3.1'
 
 services:
-  nginx:
-    container_name: meridthio_nginx
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./code/nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./code/site:/usr/share/nginx/html
-    networks:
-      - docker-network
   app:
-    container_name: meridthio_flask
-    build: .
+    container_name: meridthio_jekyll
+    image: jekyll/jekyll
     ports:
-      - "5000:5000"
-    volumes:
-      - .:/code
-
-networks:
-  docker-network:
-    driver: bridge
+      - "4000:4000"
